--- a/bootfs/var/www/index.html
+++ b/bootfs/var/www/index.html
@@ -10,6 +10,7 @@
 		<link href="set.css" type="text/css" rel="stylesheet">
 		<script type="text/javascript" src="setlanguage.js"></script>
 		<script type="text/javascript" src="getlanguage.js"></script>
+		<script type="text/javascript" src="ajax.js"></script>
 		<!--[if lt IE 7]>
 		<script language="JavaScript">
 			function correctPNG() // correctly handle PNG transparency in Win IE 5.5 & 6.
@@ -87,17 +88,32 @@
 			<div class="content">
 			<script type="text/javascript">
 
+				// 取得 userAgent
+				var agent=navigator.userAgent;
+				while(agent.indexOf(";")>=0)
+				{
+					agent=agent.replace(";","");
+				}
+				document.cookie="agent="+agent+";";
+
+				//
 				if (typeof document.body.style.maxHeight == "undefined") {
 					document.write('<p class="emphasize">&nbsp;'+ showText(6) +'</p>')
 				}
-				if(document.cookie.indexOf("CD32N:MD-253")<0)
-					var str = 'login.htm'
-				else
+				var verify = recheckAccount(true);
+				var	msg = verify.split("\n");
+				if(msg[0] == "OK"){
 					var str = 'status.htm'
+					document.cookie="uid="+msg[1]+";";
+					document.cookie="sum="+msg[2]+";";
+				}
+				else
+					var str = 'login.htm'
 
 			</script>
 				<noscript><p class="emphasize"><span style="color:black">Error:<br /></span>It seems you have turned off Javascript support in your browser.<br /> Please turn on Javascript because it is needed for this userinterface to function properly.</p></noscript>
 				<script type="text/javascript">
+				//alert("src="+str);
 				document.write("<iframe src="+str+" name=iframe id=iframe frameborder=no width=994px onload=\"calcHeight('parent')\" allowtransparency></iframe>");
 				</script>
 			</div>
