Login related changes on webinterface

--- a/bootfs/var/www/index.html
+++ b/bootfs/var/www/index.html
@@ -89,6 +89,7 @@
 			<script type="text/javascript">
 
 				// 取得 userAgent
+				/*
 				var agent=navigator.userAgent;
 				while(agent.indexOf(";")>=0)
 				{
@@ -109,6 +110,9 @@
 				}
 				else
 					var str = 'login.htm'
+				*/
+				//取消login 改為 web server authentication
+				str = 'status.htm'
 
 			</script>
 				<noscript><p class="emphasize"><span style="color:black">Error:<br /></span>It seems you have turned off Javascript support in your browser.<br /> Please turn on Javascript because it is needed for this userinterface to function properly.</p></noscript>
